# OpenIVario

components/arduino-esp32/: CMakeLists.txt
main/: IpsDisplay.cpp  IpsDisplay.h  SetupMenu.cpp  sensor.cpp
